# Personal_Assistant

./: README.md  main.py  pyproject.toml
src/: State.py  routers.py
src/agents/: Evaluator.py  Manager.py
src/agents/daily_briefing/: DailyBriefing.py
src/agents/email_calendar/: EmailCalendar.py
src/agents/job_application/: JobApplication.py
src/agents/research_finder/: ResearchFinder.py
src/agents/stock_analysis/: StockAnalysis.py
src/tools/: CommonTools.py  DailyBriefingToolNode.py  EmailCalendarToolNode.py  EmailCalendarTools.py  JobApplicationToolNode.py  JobApplicationTools.py  ResearchFinderToolNode.py  ResearchFinderTools.py  StockAnalysisToolNode.py  StockAnalysisTools.py
